Fix UL alignment by reconfiguring html now it looks properly

--- a/style.css
+++ b/style.css
@@ -24,15 +24,16 @@ body {
 
 .hero  {
     background-color: rgb(53, 152, 218);
+    padding-bottom: 50px;
     
 }
 
 .hero .container {
     display: flex;
     flex-direction: column;
-
-    gap: 25px;
    padding: 20px 10px;
+   gap: 20px;
+
 
 }
 
@@ -44,45 +45,49 @@ body {
 
 .mainlogo {
     
-    height: 110px;
+    height: 120px;
     width: auto;
     }
 
 li {
     list-style-type: none;
+    
+}
+
+a {
+    text-decoration: none;
+   
 }
 
 ul {
     display: flex;
     gap: 25px;
+    
 }
 
-a {
-    text-decoration: none;
-}
 
 .hero-section {
     display: flex;
     justify-content: space-between;
-
-   flex-wrap: wrap;
+    align-items: center;
+flex-wrap: wrap;
     
+}
+
+
+.block1 {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 500px;
+    gap: 15px;
+    flex-direction: column;
+
 }
 
 .h-title {
     font-size: 48px;
     color: #E5E7EB;
     font-weight: 900    ;
-}
-
-.block1 {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 450px;
-    gap: 15px;
-    flex-direction: column;
-    flex-grow: 0;
-    align-self: flex-start;
 }
 
 button {
@@ -104,7 +109,7 @@ button {
   }
 
   .placeholder {
-    width: 540px;
+    width: 500px;
     height: auto;
     border-radius: 10px;
     border: 1px rgb(145, 217, 250) solid;
